--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -39,5 +39,5 @@
 <li>Reading</li>
 <li>Travel to French and Spanish speaking countries</li>
 
-
+<script type="text/javascript" src="visitorcount.js"></script>
 
