--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -42,7 +42,6 @@
 <script type = "text/javascript">  const userAction = async () => {
   const response = await fetch('https://h2r98egvbi.execute-api.us-east-2.amazonaws.com/Prod/Visitor_Count/');
   const myJson = await response.json(); //extract JSON from the http response
-  string txt = JSON.stringify(myJson, null, 2);
-  document.getElementById("txt").innerHTML = listAsStr;
+  console.log(myJson);
   } </script>
 
