--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -40,8 +40,14 @@
 <li>Travel to French and Spanish speaking countries</li>
 
 <script type = "text/javascript">  
-  const response = fetch('https://h2r98egvbi.execute-api.us-east-2.amazonaws.com/Prod/Visitor_Count/');
-  const myJson = await response.json(); //extract JSON from the http response
-  console.log(JSON.stringify(myJson));
+  var apiUrl = 'https://pokeapi.co/api/v2/pokemon/ditto/';
+    fetch(apiUrl).then(response => {
+      return response.json();
+    }).then(data => {
+      // Work with JSON data here
+      console.log(data);
+    }).catch(err => {
+      // Do something for an error here
+    });
   </script>
 
