--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -40,7 +40,7 @@
 <li>Travel to French and Spanish speaking countries</li>
 
 <script type = "text/javascript">  
-  var apiUrl = 'https://pokeapi.co/api/v2/pokemon/ditto/';
+  var apiUrl = 'https://h2r98egvbi.execute-api.us-east-2.amazonaws.com/Prod/Visitor_Count/';
     fetch(apiUrl).then(response => {
       return response.json();
     }).then(data => {
