--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -41,13 +41,8 @@
 
 <script type = "text/javascript">  
   var apiUrl = 'https://h2r98egvbi.execute-api.us-east-2.amazonaws.com/Prod/Visitor_Count/';
-    fetch(apiUrl).then(response => {
-      return response.json();
-    }).then(data => {
-      // Work with JSON data here
-      console.log(data);
-    }).catch(err => {
-      // Do something for an error here
-    });
+  fetch(apiUrl)
+    .then(response => response.json();
+    .then(data => console.log(data));
   </script>
 
