--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -32,7 +32,7 @@
 <p><strong>Languages: </strong>English: Native, French: Certified Fluent, Spanish: Conversational, Portuguese: Intermediate</p>
 
 <p><strong>Extracurriculars</strong></p>
-<li><strong>Hu Bioengineering Lab Volunteer, </strong>Spring 2019</li>
+<li><strong>Hu Bioengineering Lab Volunteer: </strong>Spring 2019</li>
 
 <p><strong>Interests</strong></p>
 <li>Lifting weights</li>
