--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<p>Antonio Flores</p>
+<p>Antonio J. Flores</p>
 <p>Email: <u>antoniojflores0@gmail.com</u>  </p>
 <p><strong>Education</strong></p>
 <p><strong>Georgia Institute of Technology</strong></p>
