--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<p>Antonio J. Flores</p>
+<p>Antonio Flores</p>
 <p>Email: <u>antoniojflores0@gmail.com</u>  </p>
 <p><strong>Education</strong></p>
 <p><strong>Georgia Institute of Technology</strong></p>
@@ -38,6 +38,10 @@
 <li>Lifting weights</li>
 <li>Reading</li>
 <li>Travel to French and Spanish speaking countries</li>
+
+<p> The number of visitors to this website is </p>
+<p id ="Visitor_Count"></p>
+
 
 <script type = "text/javascript">
   var apiUrl = "https://h2r98egvbi.execute-api.us-east-2.amazonaws.com/Prod/Visitor_Count/";
