--- a/Resume 6_20_21.html
+++ b/Resume 6_20_21.html
@@ -1,10 +1,10 @@
 
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<p>Antonio J. Flores</p>
+<p>Antonio Flores</p>
 <p>Email: <u>antoniojflores0@gmail.com</u>  </p>
 <p><strong>Education</strong></p>
 <p><strong>Georgia Institute of Technology</strong></p>
-<p>Online M.S. Computer Science, Starting Fall 2021</p>
+<p>Master of Science in Computer Science, Starting Fall 2021</p>
 
 <p><strong>University of Minnesota - Twin Cities</strong></p>
 <p>B. S. Mathematics - May 2021, GPA: 3.5 </p>
