--- a/Resume.html
+++ b/Resume.html
@@ -1,7 +1,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <p>Antonio Flores</p>
-<p>Email: <u>antoniojflores0@gmail.com</u>  </p>
+<p>Email: <u>Antonio@antonioflores.xyz</u>  </p>
 <p><strong>Education</strong></p>
 <p><strong>Georgia Institute of Technology</strong></p>
 <p>Online M.S. Computer Science, Starting Fall 2021</p>
@@ -42,6 +42,9 @@
 <li>Lifting weights</li>
 <li>Reading</li>
 <li>Travel to French and Spanish speaking countries</li>
+
+<p></p>
+<p></p>
 
 <a href="https://dev.to/ajflo/my-cloud-resume-challenge-journey-520o"> Here is a description of my cloud journey so far.</a>
 
