--- a/Resume.html
+++ b/Resume.html
@@ -15,9 +15,18 @@
 <p>Full-Time PSEO - 2017-2018, GPA: 3.9 </p>
 <p>Relevant Coursework: Multivariable Calculus, Computing</p>
 
-<p><strong>AWS Certified Cloud Practitioner</strong></p>
+<p><strong>Certifications</strong></p>
+
+<p>AWS Certified Developer - Associate</p>
+<p>Received January 2022</p>
+
+<p>AWS Certified Solutions Architect - Associate</p>
+<p>Received September 2021</p>
+
+<p>AWS Certified Cloud Practitioner</p>
 <p>Received August 2021</p>
-<p>Validation Number: XB4S0XLJJMB41638</p>
+
+
 
 <p><strong>Employment History</strong></p>
 <p><strong>IT Intern - OnlineApplication.ie					  September - December 2020</strong></p>
